fix layout issue
width was different for each card

--- a/src/App.css
+++ b/src/App.css
@@ -39,16 +39,16 @@ header{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 6.25rem 2.5rem;
+  margin: 6.25rem 2.5rem 0 2.5rem;
 }
 
 /* card component */
 
 .card-outer-wrapper{
-  max-width: 100%;
   margin: 0;
   display: flex;
   flex-direction: column;
+  max-width: 43.75rem;
 }
 
 .card-container{
